tests/snapshots/regression/semantic_types__adts__constructor_arity_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/adts/constructor_arity_error.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 2 errors • tests/fixtures/semantic_types/adts/constructor_arity_error.flx
error[E430]: Could Not Infer Concrete Type

Could not determine a concrete type for `main` at the public function signature. Inferred type: `() -> _`.

  tests/fixtures/semantic_types/adts/constructor_arity_error.flx:3:1
  |
3 | fn main() {
  | ^^^^^^^^^

Hint:
  Add a type annotation: e.g. `fn main(x: Int, y: Int): Int`


error[E082]: Constructor Arity Mismatch

Constructor `Pair` expects 2 argument(s) but got 1.

  tests/fixtures/semantic_types/adts/constructor_arity_error.flx:4:5
  |
4 |     Pair(1)
  |     ^^^^^^^

Found 2 errors.
